hawk for some reason fails to start when using Java9
added a fallback to use the default WatchService when hawk fails
to start properly. It is a bit scary to rely on something that
is basically unmaintained to years. JDK doesn't seem interested
in providing a proper WatchService for OSX. :(